--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14"
   },
