--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
     "react-slick": "^0.30.3",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14"
